# agentic-quantum-error-handling-lab

./: .gitignore  Dockerfile  Dockerfile.mcp  Dockerfile.web  NOTICE  README.md  agent.py  agent_mcp.py  deploy-web.sh  pyproject.toml  requirements.txt
cdk/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
cdk/lib/: aqem-web-stack.ts
config/: default.yaml  example.env
deploy/: RUNBOOK.md  deploy.sh  execution-role-policy.json
docs/: quantum-calibration-agent.drawio
docs/contents/: aqem-agentic-qem-talk.pptx  ppt-outlines.md  speaker-notes.md
docs/design-docs/: design-doc.md  todo.md
src/aqem/: __init__.py  cli.py  config.py  loop.py  models.py  problems.py
src/aqem/baseline/: __init__.py  full_stack.py
src/aqem/braket_mitiq/: __init__.py  circuit_tools.py  mitigation_tools.py  mitiq_braket_tools.py  noise_models.py  observable_tools.py  program_set_tools.py
src/aqem/cloud/: __init__.py  artifacts.py  guardrails.py  mcp_server.py  runtime.py
src/aqem/dag/: __init__.py  context.py  engine.py  node.py
src/aqem/decision/: __init__.py  agent.py  rules.py
src/aqem/nodes/: __init__.py  _stream.py  circuit_generate.py  empirical_probe.py  execute.py  post_process.py  readout_calibrate.py  report.py  strategy_select.py  validate.py
src/aqem/policy/: __init__.py  actions.py  audit.py  policy.py
src/aqem/probes/: __init__.py  circuits.py  classify.py  histograms.py
src/aqem/reporting/: __init__.py  efficiency.py  plots.py
src/aqem/tools/: __init__.py  braket_tool.py  client.py  serde.py  vlm_tool.py
src/aqem/vlm/: __init__.py  providers.py  renderer.py  schemas.py
src/aqem/web/: __init__.py  cache.py  server.py
tests/: conftest.py
tests/fixtures/: fake_vlm.py
tests/integration/: test_adaptive_loop.py  test_adaptive_loop_vlm.py  test_baseline.py  test_baseline_vs_adaptive.py  test_bedrock_smoke.py  test_execute_programset.py  test_mcp_tools.py  test_run_cache.py  test_runtime.py  test_web.py
tests/unit/: test_cloud.py  test_dag_engine.py  test_decision_agent.py  test_decision_rules.py  test_efficiency.py  test_policy.py  test_probes_and_problem.py  test_serde.py  test_tool_client.py  test_vlm_tool.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  Chart.tsx  api.ts  plotly.d.ts  styles.css  types.ts
